# server/src/users/user.service.ts
@@ -18,4 +18,14 @@ export class UserService {
       async saveUser(input: User): Promise<User> {
             return await this.userRepository.save(input);
       }
+
+      async searchUsersByName(name: string, pageSize = 12, currentPage = 0) {
+            return await this.userRepository
+                  .createQueryBuilder()
+                  .select('id, username, name, avatarUrl, createDate, elo')
+                  .where('name like :name ', { name: `%${name}%` })
+                  .take(pageSize)
+                  .skip(currentPage * pageSize)
+                  .execute();
+      }
 }
